Added tests, new functions and blocked the form in case there is an error in the license plate

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <input class="btn-success" type="submit" value="Should you be on the road?"/>
             </form>
 
+            <div id="day" class="randomDigit"> </div>
             <div id="randomLastDigit" class="randomDigit"> </div>
+            <div id="goodToGo" class="randomDigit"> </div>
             
     </div>
    
